--- a/app/styles/pages/_logged-in.scss
+++ b/app/styles/pages/_logged-in.scss
@@ -243,8 +243,8 @@
 					margin-top: 10px;
 					
 					.btn-tape {
-						padding-left: 15px;
-						padding-right: 15px;
+						padding-left: 10px;
+						padding-right: 10px;
 						margin: 20px auto 0;
 					}
 				}
